fix list alignment

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -49,7 +49,7 @@ li {
     vertical-align: top;
 }
 
-.todo-items {
+.todo-items, .done-items {
     text-align: left;
 }
 
